@@ -11,9 +11,9 @@ DIST kde-3.5.9-seli-xinerama.tar.bz2 15150 RMD160 09f9dc74e52d1507a73d1140654021
 DIST kdelibs-3.5-patchset-15.tar.bz2 6707 RMD160 55958374bfc4ba27caf573e13337677c35cbe2c0 SHA1 e0a35642adfcf223ce7490b21af1fa2c3d922b93 SHA256 4a25bc340ce2567ea017456b4aa2292b288779d59d0dd012bd50f5189fe739ec
 DIST kdelibs-3.5.10.tar.bz2 15614607 RMD160 4c960664283c83ebc8e68932ca9044336fcff223 SHA1 c930a25f4419134def55b8466c3a6f737227fb82 SHA256 617e9cb01c70ed4c1b554b373f55deffbd0e12e2cdfeacd7b3d9409372285c72
 EBUILD kdelibs-3.5.10-r10.ebuild 7612 RMD160 4485bc6aef47a938291f8631d3a62577e1e182ac SHA1 741ad46c73268acf0befbcbd209a40b59d20002f SHA256 64ab288a96ee3452379623a5bb5dd258e7c2953222b7f2c09ba2e8a2ba6f7ea0
-EBUILD kdelibs-3.5.10-r6.ebuild 7412 RMD160 0a1c7f484807336f6223687ee18bd1ad7912c9b8 SHA1 c83cddf492e58882a94e7f24d46b830103ee0fe5 SHA256 89b3380613a9333765237b015f78bfde64e0d18a49c3a6fc0d27f8d52bbcab2e
-EBUILD kdelibs-3.5.10-r7.ebuild 7582 RMD160 874cdbd3e21b717c44522ab282a7fe66250a127f SHA1 1b3222e0ec4f4e14c7c27b3d520668b43cb4f525 SHA256 7fcc3d0526c809b53f206958e981703ef5ca2c631dcbf7c39a49ea385141a7a4
-EBUILD kdelibs-3.5.10-r8.ebuild 7457 RMD160 597ee32ca2b46a8c15da2ab64949f0ae531bf4d5 SHA1 7b3ebb53e7f3fcb25366f31d9cb4128a9fb7306b SHA256 48a7d927095fe7bc3ee63e77492aa0e38c849199677b42d5c78244ce4bcf8baa
-EBUILD kdelibs-3.5.10-r9.ebuild 7567 RMD160 4acd886997cb700f8ebaf08d42c08e9cf8001ac4 SHA1 5bb4133151851c301b46f659fa83d553224a57b8 SHA256 c24105af9b55b4920b72d14c15d67025af6834056d438a56de3e6e44d70c5378
-MISC ChangeLog 106635 RMD160 ad1898328ec5d8de5791ed15399ddd42ebd2641e SHA1 7409d85efeb4176c4f3cf12bb059deb1b039bbda SHA256 00eecd3ae763e17ce7b78d7dd2bf7b446964eb1697893220c8badd3c438298e9
+EBUILD kdelibs-3.5.10-r6.ebuild 7437 RMD160 a486b3742ce0d7c04b5c5e855fa1aaf36f2b5011 SHA1 7231db27e357e8cd5e3c4754fe3ce759bdd7c6ec SHA256 79c2e077fcf2f1d6dc3000e1965d83f7d514e3e8c9d03e6fb0cc46d0e262cd11
+EBUILD kdelibs-3.5.10-r7.ebuild 7607 RMD160 affd2c4792be58cb04ff3f6f16fe985e562d5a82 SHA1 9ec94f704cba5492ba721888b07024daf0c78da3 SHA256 a7a2136beebcbe5228dc2d13c0e94f4258784cb82ecad9846efde7c7211501ac
+EBUILD kdelibs-3.5.10-r8.ebuild 7482 RMD160 611bb88216d5e87d21cfbd16ca057e83ec0dd487 SHA1 02f3fdf41536b6e397d2b04c728ccd39aff6fca5 SHA256 0df01f128b0f50fef0318c4b937e24d666c0909c746a04a3d6daf67b18a3b520
+EBUILD kdelibs-3.5.10-r9.ebuild 7592 RMD160 c3bbc339b08512b7d84e64bdd2272f011253d231 SHA1 b8936e84510968bc20a89e5802385e464886d2e6 SHA256 ba8edc1382f54e6ef224b0bec59dbb65e3260e8f2df3f2cebf00fec13ab47e70
+MISC ChangeLog 106844 RMD160 2a1080486a10aef7929d41273bf4e80be4511e7f SHA1 ecf27609fbfaf11218eaf79dc05e966c19ea1d71 SHA256 ae2342c3cef0552666dc48e198cc2c216794283bd640e7f91eea8d8de14386b9
 MISC metadata.xml 375 RMD160 0a16bbd99eb0c4f3d89dbede17c5d6feea41c6ba SHA1 531b56c08557857a57c7833d2bab42cdf879b9a8 SHA256 3b5a8f2ca27aa45532679f3ab64756b02a953c5c11e86d9539cec95bab292b9b
